--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     ],
     "require": {
-        "php": "^7.0|^8.0"
+        "php": "^7.1|^8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^7|^8|^9",
         "vimeo/psalm": "^4.3"
     },
     "autoload": {
